# agent_teams_starter

./: .env.example  CLAUDE.md  README.md  prompt.md  pyproject.toml
data/: agent_teams.db
src/app/: main.py
src/app/api/: dashboard.py  orchestration.py  websocket.py
src/app/api/agents/: __init__.py  architect.py  implement.py  reviewer.py  tester.py
src/app/core/: database.py  websocket_manager.py
src/app/core/agents/: __init__.py  architect_agent.py  base_agent.py  implement_agent.py  reviewer_agent.py  tester_agent.py
src/app/core/llm_providers/: __init__.py  anthropic_provider.py  base.py  factory.py  glm_provider.py  openai_provider.py
src/app/models/: __init__.py  agent_requests.py  agent_responses.py  database.py  orchestration.py
src/app/repositories/: __init__.py  workflow_repository.py
src/app/services/: __init__.py  workflow_orchestrator.py
tests/: conftest.py
tests/api/: test_agents.py  test_health.py  test_orchestration.py
tests/core/: test_agents.py
