[project]
name = "agent-teams-starter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.40.0",
    "anthropic>=0.45.0",
    "openai>=1.60.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "faker>=35.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
